--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,73 @@ main {
 #agradecimientos {
     margin-top: 10px;
 }
+
+.effectTxt {
+    font-size: 15px;
+    font-weight: 600;
+    background-color: ORANGE;
+    animation: opacityColor 1s infinite linear;
+    border-radius: 4px;
+    padding: 4px;
+}
+
+@keyframes opacityColor {
+    0% {
+        background-color: rgba(255, 0, 0, 0.3)
+    }
+
+    1% {
+        background-color: rgba(255, 0, 0, 0.2)
+    }
+
+    100% {
+        background-color: rgba(255, 0, 0, 0.1)
+    }
+}
+
+.cont-img-contact {
+  position: relative;
+}
+
+.imagen-contact {
+  border-radius: 50%;
+}
+.popMsj {
+  position: absolute;
+  top: -13px;
+  right: 330px;
+  width: 40%;
+  height: 100px;
+  background-color: wheat;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 40px 40px 0 40px;
+}
+.popMsj::after {
+  content: "";
+  position: absolute;
+  border-top: 40px solid transparent;
+  border-bottom: 40px solid transparent;
+  border-left: 40px solid wheat;
+  border-right: 40px solid transparent;
+  top: 30px;
+  right: -40px;
+  transform: rotate(-45deg);
+}
+@media screen and (max-width: 375px) {
+  .cont-img-contact {
+    margin-top: 30px;
+  }
+  .popMsj {
+    right: 50px;
+    top: 260px;
+    width: 300px;
+    border-radius: 40px 0 40px 40px;
+    background-color: rgba(245, 222, 179, 0.829);
+  }
+  .popMsj::after {
+    display: none;
+  }
+}
